merge hmacutils changes
Former-commit-id: 67d95aa2dc5f3271d2439a44f993a89ac9a70c1f
Former-commit-id: 5bcce27491e576e42311b2faf3567d1d1dd413ed